[gd_scene load_steps=7 format=3 uid="uid://w3sev5h8rwxg"]

[ext_resource type="TileSet" uid="uid://b2qx1ml6054ei" path="res://Tilesheets/tilesheet.tres" id="1_1smjk"]
[ext_resource type="Script" path="res://Scripts/GUI/title.gd" id="1_vvr54"]
[ext_resource type="Texture2D" uid="uid://pl3ebfiy510k" path="res://Sprites/title.png" id="2_8fldf"]

[sub_resource type="Shader" id="Shader_0j2m4"]
code = "shader_type canvas_item;


uniform vec4 WATER_COL : source_color =  vec4(0.176471, 0.635294, 0.85098, 1.0);
uniform vec4 WATER2_COL : source_color =  vec4(0.0588235, 0.529412, 0.776471, 1.0);
uniform vec4 FOAM_COL : source_color = vec4(0.87451, 0.988235, 1, 1.0);

uniform float distortion_speed = 2.0;
uniform vec2 tile = vec2(5.0, 5.0);
uniform vec2 offset = vec2(0, 0);

const float TWOPI = 6.283185307;
const float SIXPI = 18.84955592;


float circ(vec2 pos, vec2 c, float s)
{
    c = abs(pos - c);
    c = min(c, 1.0 - c);

    return smoothstep(0.0, 0.002, sqrt(s) - sqrt(dot(c, c))) * -1.0;
}


float waterlayer(vec2 uv)
{
    uv = mod(uv, 1.0); // Clamp to [0..1]
    float ret = 1.0;
    ret += circ(uv, vec2(0.37378, 0.277169), 0.0268181);
    ret += circ(uv, vec2(0.0317477, 0.540372), 0.0193742);
    ret += circ(uv, vec2(0.430044, 0.882218), 0.0232337);
    ret += circ(uv, vec2(0.641033, 0.695106), 0.0117864);
    ret += circ(uv, vec2(0.0146398, 0.0791346), 0.0299458);
    ret += circ(uv, vec2(0.43871, 0.394445), 0.0289087);
    ret += circ(uv, vec2(0.909446, 0.878141), 0.028466);
    ret += circ(uv, vec2(0.310149, 0.686637), 0.0128496);
    ret += circ(uv, vec2(0.928617, 0.195986), 0.0152041);
    ret += circ(uv, vec2(0.0438506, 0.868153), 0.0268601);
    ret += circ(uv, vec2(0.308619, 0.194937), 0.00806102);
    ret += circ(uv, vec2(0.349922, 0.449714), 0.00928667);
    ret += circ(uv, vec2(0.0449556, 0.953415), 0.023126);
    ret += circ(uv, vec2(0.117761, 0.503309), 0.0151272);
    ret += circ(uv, vec2(0.563517, 0.244991), 0.0292322);
    ret += circ(uv, vec2(0.566936, 0.954457), 0.00981141);
    ret += circ(uv, vec2(0.0489944, 0.200931), 0.0178746);
    ret += circ(uv, vec2(0.569297, 0.624893), 0.0132408);
    ret += circ(uv, vec2(0.298347, 0.710972), 0.0114426);
    ret += circ(uv, vec2(0.878141, 0.771279), 0.00322719);
    ret += circ(uv, vec2(0.150995, 0.376221), 0.00216157);
    ret += circ(uv, vec2(0.119673, 0.541984), 0.0124621);
    ret += circ(uv, vec2(0.629598, 0.295629), 0.0198736);
    ret += circ(uv, vec2(0.334357, 0.266278), 0.0187145);
    ret += circ(uv, vec2(0.918044, 0.968163), 0.0182928);
    ret += circ(uv, vec2(0.965445, 0.505026), 0.006348);
    ret += circ(uv, vec2(0.514847, 0.865444), 0.00623523);
    ret += circ(uv, vec2(0.710575, 0.0415131), 0.00322689);
    ret += circ(uv, vec2(0.71403, 0.576945), 0.0215641);
    ret += circ(uv, vec2(0.748873, 0.413325), 0.0110795);
    ret += circ(uv, vec2(0.0623365, 0.896713), 0.0236203);
    ret += circ(uv, vec2(0.980482, 0.473849), 0.00573439);
    ret += circ(uv, vec2(0.647463, 0.654349), 0.0188713);
    ret += circ(uv, vec2(0.651406, 0.981297), 0.00710875);
    ret += circ(uv, vec2(0.428928, 0.382426), 0.0298806);
    ret += circ(uv, vec2(0.811545, 0.62568), 0.00265539);
    ret += circ(uv, vec2(0.400787, 0.74162), 0.00486609);
    ret += circ(uv, vec2(0.331283, 0.418536), 0.00598028);
    ret += circ(uv, vec2(0.894762, 0.0657997), 0.00760375);
    ret += circ(uv, vec2(0.525104, 0.572233), 0.0141796);
    ret += circ(uv, vec2(0.431526, 0.911372), 0.0213234);
    ret += circ(uv, vec2(0.658212, 0.910553), 0.000741023);
    ret += circ(uv, vec2(0.514523, 0.243263), 0.0270685);
    ret += circ(uv, vec2(0.0249494, 0.252872), 0.00876653);
    ret += circ(uv, vec2(0.502214, 0.47269), 0.0234534);
    ret += circ(uv, vec2(0.693271, 0.431469), 0.0246533);
    ret += circ(uv, vec2(0.415, 0.884418), 0.0271696);
    ret += circ(uv, vec2(0.149073, 0.41204), 0.00497198);
    ret += circ(uv, vec2(0.533816, 0.897634), 0.00650833);
    ret += circ(uv, vec2(0.0409132, 0.83406), 0.0191398);
    ret += circ(uv, vec2(0.638585, 0.646019), 0.0206129);
    ret += circ(uv, vec2(0.660342, 0.966541), 0.0053511);
    ret += circ(uv, vec2(0.513783, 0.142233), 0.00471653);
    ret += circ(uv, vec2(0.124305, 0.644263), 0.00116724);
    ret += circ(uv, vec2(0.99871, 0.583864), 0.0107329);
    ret += circ(uv, vec2(0.894879, 0.233289), 0.00667092);
    ret += circ(uv, vec2(0.246286, 0.682766), 0.00411623);
    ret += circ(uv, vec2(0.0761895, 0.16327), 0.0145935);
    ret += circ(uv, vec2(0.949386, 0.802936), 0.0100873);
    ret += circ(uv, vec2(0.480122, 0.196554), 0.0110185);
    ret += circ(uv, vec2(0.896854, 0.803707), 0.013969);
    ret += circ(uv, vec2(0.292865, 0.762973), 0.00566413);
    ret += circ(uv, vec2(0.0995585, 0.117457), 0.00869407);
    ret += circ(uv, vec2(0.377713, 0.00335442), 0.0063147);
    ret += circ(uv, vec2(0.506365, 0.531118), 0.0144016);
    ret += circ(uv, vec2(0.408806, 0.894771), 0.0243923);
    ret += circ(uv, vec2(0.143579, 0.85138), 0.00418529);
    ret += circ(uv, vec2(0.0902811, 0.181775), 0.0108896);
    ret += circ(uv, vec2(0.780695, 0.394644), 0.00475475);
    ret += circ(uv, vec2(0.298036, 0.625531), 0.00325285);
    ret += circ(uv, vec2(0.218423, 0.714537), 0.00157212);
    ret += circ(uv, vec2(0.658836, 0.159556), 0.00225897);
    ret += circ(uv, vec2(0.987324, 0.146545), 0.0288391);
    ret += circ(uv, vec2(0.222646, 0.251694), 0.00092276);
    ret += circ(uv, vec2(0.159826, 0.528063), 0.00605293);
	return max(ret, 0.0);
}

vec3 water(vec2 uv, vec3 cdir, float iTime)
{
    uv *= vec2(0.25);
	
	

    // Parallax height distortion with two directional waves at
    // slightly different angles.
    vec2 a = 0.025 * cdir.xz / cdir.y; // Parallax offset
    float h = sin(uv.x + iTime); // Height at UV
    uv += a * h;
    h = sin(0.841471 * uv.x - 0.540302 * uv.y + iTime);
    uv += a * h;
    
    // Texture distortion
    float d1 = mod(uv.x + uv.y, TWOPI);
    float d2 = mod((uv.x + uv.y + 0.25) * 1.3, SIXPI);
    d1 = iTime * 0.07 + d1;
    d2 = iTime * 0.5 + d2;
    vec2 dist = vec2(
    	sin(d1) * 0.15 + sin(d2) * 0.05,
    	cos(d1) * 0.15 + cos(d2) * 0.05
    );
    
    vec3 ret = mix(WATER_COL.rgb, WATER2_COL.rgb, waterlayer(uv + dist.xy));
    ret = mix(ret, FOAM_COL.rgb, waterlayer(vec2(1.0) - uv - dist.yx));
    return ret;
}

varying vec2 globalposition;
void vertex(){
	globalposition = (MODEL_MATRIX * vec4(VERTEX, 0.0, 1.0)).xy;
}

void fragment() {
	vec2 uv = globalposition / 32.0;
	COLOR.rgb = vec3(water(uv * tile + offset, vec3(0,1,0), TIME * distortion_speed));
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tuufp"]
shader = SubResource("Shader_0j2m4")
shader_parameter/WATER_COL = Color(0.176471, 0.635294, 0.85098, 1)
shader_parameter/WATER2_COL = Color(0.0588235, 0.529412, 0.776471, 1)
shader_parameter/FOAM_COL = Color(0.87451, 0.988235, 1, 1)
shader_parameter/distortion_speed = 0.0
shader_parameter/tile = Vector2(2, 2)
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="CanvasTexture" id="CanvasTexture_aruuo"]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_vvr54")

[node name="WaterShader" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tuufp")
position = Vector2(630, 389)
scale = Vector2(1479, 924)
texture = SubResource("CanvasTexture_aruuo")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(23, 22)
scale = Vector2(0.5, 0.5)
tile_set = ExtResource("1_1smjk")
format = 2
layer_0/tile_data = PackedInt32Array(0, 393218, 3, 1, 393218, 3, 2, 458754, 3, 3, 393218, 3, 4, 458754, 3, 5, 393218, 3, 6, 393218, 3, 7, 458754, 3, 8, 393218, 3, 9, 393218, 3, 10, 393218, 3, 11, 393218, 3, 12, 458754, 3, 13, 393218, 3, 14, 393218, 3, 15, 393218, 3, 16, 458754, 3, 17, 393218, 3, 18, 393218, 3, 19, 393218, 3, -65536, 458754, 1, -65535, 458754, 2, -65534, 393218, 2, -65533, 393218, 2, -65532, 458754, 1, -65531, 458754, 1, -65530, 458754, 2, -65529, 458754, 1, -65528, 393218, 1, -65527, 393218, 2, -65526, 393218, 1, -65525, 393218, 2, -65524, 458754, 2, -65523, 393218, 2, -65522, 393218, 1, -65521, 393218, 2, -65520, 393218, 1, -65519, 393218, 2, -65518, 393218, 1, -65517, 393218, 1, 65535, 196610, 2, -1, 393218, 1, 131071, 524290, 2, 196607, 524290, 1, 262143, 524290, 1, 327679, 524290, 1, 393215, 524290, 2, 458751, 524290, 1, 524287, 524290, 1, 589823, 524290, 2, 655359, 524290, 1, 720895, 524290, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(600, 289)
texture = ExtResource("2_8fldf")

[node name="UI" type="Node" parent="."]

[node name="Button" type="Button" parent="UI"]
offset_left = 517.0
offset_top = 587.0
offset_right = 617.0
offset_bottom = 622.0
text = "Play"

[node name="LineEdit" type="LineEdit" parent="UI"]
offset_left = 477.0
offset_top = 514.0
offset_right = 677.0
offset_bottom = 545.0
placeholder_text = "Enter Player Name..."

[connection signal="pressed" from="UI/Button" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="UI/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="UI/LineEdit" to="." method="_on_line_edit_text_submitted"]
